# pellx_monitor

./: Cargo.toml  LICENSE-MIT  README.md  pellx_monitor.service  pellx_monitor@.service
src/: batsign.rs  cli.rs  config.rs  defaults.rs  file_config.rs  main.rs  notifications.rs  settings.rs  slack.rs
src/backend/: batsign.rs  mod.rs  slack.rs
src/notify/: context.rs  mod.rs  result.rs  state.rs  traits.rs  two_level.rs
