[package]
name = "pellx_monitor"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive"] }
humantime = { version = "2.3" }
humantime-serde = { version = "1.1" }
reqwest = { version = "0.13", features = ["blocking"] }
rppal = { version = "0.22" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "1.0" }
